# burnout

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  example.mojo  pixi.toml  pyproject.toml
burnout/: __init__.py  core.py  utils.py
docs/: README.md
examples/: simple_test_example.py
tests/: __init__.py  test_core.py  test_integration.py
